Bug 1803623 - Don't use `Result::unwrap` after ignoring the error state r=m_kato

Depends on D163767

Differential Revision: https://phabricator.services.mozilla.com/D163768